securisation-et-endpoint
